--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "max-len": ["error", { "code": 100 }],
     "prefer-promise-reject-errors": ["off"],
     "react/jsx-filename-extension": ["off"],
+    "react/destructuring-assignment": ["off"],
     "react/jsx-closing-bracket-location": [1, "tag-aligned"],
     "react/prop-types": ["off"],
     "no-return-assign": ["off"]
