--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-dropzone": "^10.2.1",
     "react-leaflet": "^2.6.1",
     "react-leaflet-draw": "^0.19.0",
     "react-redux": "^7.2.0",
