--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,4 @@
 {
-  "printWidth": 100,
-  "tabWidth": 2,
-  "singleQuote": false,
-  "jsxBracketSameLine": true,
+  "singleQuote": true,
   "trailingComma": "es5"
 }
