--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "leaflet": "^1.6.0",
+    "leaflet-draw": "^1.0.4",
     "moment": "^2.26.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -17,6 +18,7 @@
     "react-grid-system": "^7.0.2",
     "react-icons": "^3.10.0",
     "react-leaflet": "^2.7.0",
+    "react-leaflet-draw": "^0.19.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
