--- a/package.json
+++ b/package.json
@@ -23,11 +23,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-semantic-ui-range": "^0.7.0",
     "redux": "^4.0.5",
-    "rsuite": "^4.7.4",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "rsuite": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
